# invite-center

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  db.py  mailer.py  main.py  security.py  services.py
app/static/: admin.html  apply.html  forgot-password.html  launch.html  login.html  logout.html  register.html  reset-password.html  style.css
docs/: app-integration-guide.md  backend-integration-examples.md  callback-template.html  deployment-onepager.md  grok2api-integration.md  pentest-checklist.md  reverse-proxy-examples.md
scripts/: run.sh
tests/: test_core.py
